
 == {es} version 6.6.2

=== Bug Fixes

* Fixes an issue where interim results would be calculated after advancing time into an empty bucket. {ml-pull}416[#416]

 == {es} version 6.6.0

=== Breaking Changes

=== Deprecations

=== New Features

=== Enhancements

=== Bug Fixes

Fix cause of "Sample out of bounds" error message (See {ml-pull}355[355].}

=== Regressions

 == {es} version 6.5.5

=== Bug Fixes

Fix a race condition if a forecast job requires overflowing to disk but cleanup of temporary
storage fails. This can cause the autodetect process to hang on exit, if more forecast requests
are in the queue. (See {ml-pull}352[352].)

 == {es} version 6.5.3

=== Bug Fixes

Correct query times for model plot and forecast in the bucket to match the times we assign
the samples we add to the model for each bucket. For long bucket lengths, this could result
in apparently shifted model plot with respect to the data and increased errors in forecasts.

 == {es} version 6.5.0

//=== Breaking Changes

//=== Deprecations

//=== New Features

=== Enhancements

Perform anomaly detection on features derived from multiple bucket values to improve robustness
of detection with respect to misconfigured bucket lengths and improve detection of long lasting
anomalies. (See {ml-pull}175[#175].)

Support decomposing a time series into a piecewise linear trend and with piecewise constant
scaling of the periodic components. This extends our decomposition functionality to handle the
same types of change points that our modelling capabilities do. (See {ml-pull}198[198].)

Increased independence of anomaly scores across partitions (See {ml-pull}182[182].)

Avoid potential false positives at model start up when first detecting new components of the time
series decomposition. (See {ml-pull}218[218].)

Add a new label - multi_bucket_impact - to record level anomaly results.
The value will be on a scale of -5 to +5 where -5 means the anomaly is purely single bucket